--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,106 +1,108 @@
 nav {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
     width: calc(100%);
-    border-radius: var(--radius-card);
-    padding: 0 15px;
-    height: 70px;
-    background-color: var(--bg-white);
-    position: relative;
+    padding: var(--p-15);
+    position: sticky;
+    background-color: var(--bg-1);
+    top: 0;
+    z-index: 100;
+    
+    &::before {
+        position: absolute;
+        content: '';
+        bottom: 0; left: 50%;
+        transform: translateX(-50%);
+        width: 200vw;
+        border-bottom: 1px solid var(--br-1);
+    }
     
     ul {
         display: flex;
-        gap: 8px;
+        gap: var(--g-8);
+
+        h1 {
+            font-weight: 900;
+            font-size: 30px;
+            color: var(--fg-1);
+        }
         
         a, button {
             display: flex;
             align-items: center;
             text-decoration: none;
-            gap: 8px;
-            color: var(--font-black);
+            gap: var(--g-8);
+            color: var(--fg-1);
             border: none;
-            padding: 6px 15px;
-            font-weight: 500;
-            border-radius: var(--radius-card);
-            border: 1px solid var(--border-mm-white);
-            background: linear-gradient(To bottom, var(--bg-white) 40%, var(--bg-mm-white) 100%);
+            padding: var(--p-8) var(--p-15);
+            border-radius: var(--rd-10);
+            border: var(--border-solid-3);
+            background: linear-gradient(To bottom, var(--bg-1) 40%, var(--bg-3) 100%);
             
-            & svg { color: inherit; width: 19px; }
+            & svg { color: inherit; width: 20px; }
 
             &:hover { opacity: 0.5; }
         }
     }
 }
 
-.about {
+header {
     width: 100%;
-    display: flex !important;
-    align-items: center;
+    display: flex;
+    align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    padding: 30px 0;
+    padding: 50px 0;
+    position: relative;
+    border-bottom: var(--border-solid-3);
+    
+    &::before {
+        position: absolute;
+        content: '';
+        top: 0;
+        right: 0;
+        width: 600px;
+        height: 100%;
+        background-image: url('/Cyber.webp');
+        background-size: cover;
+        background-repeat: no-repeat;
+        -webkit-mask-image: linear-gradient(To left, var(--bg-1), transparent);
+        mask-image: linear-gradient(To left, var(--bg-1), transparent);
+        filter: saturate(0);
+    }
 
-    .Me {
-        max-width: 350px;
-        -webkit-mask-image: linear-gradient(To bottom, var(--bg-white) 70%, transparent 80%);
-        mask-image: linear-gradient(To bottom, var(--bg-white) 70%, transparent 80%);
+    &::after {
+        position: absolute;
+        content: '';
+        top: 0;
+        right: 0;
+        width: 600px;
+        height: 100%;
+        background: linear-gradient(-60deg, #81f0ff0f, transparent);
+        -webkit-mask-image: linear-gradient(To left, var(--bg-1), transparent 80%);
+        mask-image: linear-gradient(To left, var(--bg-1), transparent 80%);
     }
 
     .title {
         width: 100%;
-        margin-top: -100px;
-        text-align: center;
-        font-size: clamp(50px, 5vw, 80px);
-        color: var(--font-black);
-        font-weight: 900;
+        font-size: clamp(60px, 8vw, 80px);
+        color: var(--fg-1);
         line-height: 1.1;
-        padding: 15px;
-        white-space: nowrap;
-    }
-}
-
-.palette-sec {
-    position: absolute;
-    width: 100%;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 100%;
-    display: flex;
-    align-items: center;
-    z-index: -1;
-    -webkit-mask-image: linear-gradient(To top, var(--bg-white) 30%, transparent 100%);
-    mask-image: linear-gradient(To top, var(--bg-white) 30%, transparent 100%);
-
-    div {
-        width: 80px;
-        height: 100%;
+        letter-spacing: -7px;
         position: relative;
-        opacity: 0.2;
-
-        &:nth-child(1) { background: linear-gradient(to bottom, #1a1a1a 0%, transparent 50%); }
-        &:nth-child(2) { background: linear-gradient(to bottom, #333333 0%, transparent 55%); }
-        &:nth-child(3) { background: linear-gradient(to bottom, #4d4d4d 0%, transparent 60%); }
-        &:nth-child(4) { background: linear-gradient(to bottom, #666666 0%, transparent 65%); }
-        &:nth-child(5) { background: linear-gradient(to bottom, #808080 0%, transparent 70%); }
-        &:nth-child(6) { background: linear-gradient(to bottom, #999999 0%, transparent 75%); }
-        &:nth-child(7) { background: linear-gradient(to bottom, #b3b3b3 0%, transparent 80%); }
-        &:nth-child(8) { background: linear-gradient(to bottom, #cccccc 0%, transparent 85%); }
-        &:nth-child(9) { background: linear-gradient(to bottom, #e6e6e6 0%, transparent 90%); }
-        &:nth-child(10) { background: linear-gradient(to bottom, #ffffff 0%, transparent 100%); }
-        &:nth-child(11) { background: linear-gradient(to bottom, #e6e6e6 0%, transparent 90%); }
-        &:nth-child(12) { background: linear-gradient(to bottom, #cccccc 0%, transparent 85%); }
-        &:nth-child(13) { background: linear-gradient(to bottom, #b3b3b3 0%, transparent 80%); }
-        &:nth-child(14) { background: linear-gradient(to bottom, #999999 0%, transparent 75%); }
-        &:nth-child(15) { background: linear-gradient(to bottom, #808080 0%, transparent 70%); }
-        &:nth-child(16) { background: linear-gradient(to bottom, #666666 0%, transparent 65%); }
-        &:nth-child(17) { background: linear-gradient(to bottom, #4d4d4d 0%, transparent 60%); }
-        &:nth-child(18) { background: linear-gradient(to bottom, #333333 0%, transparent 55%); }
-        &:nth-child(19) { background: linear-gradient(to bottom, #1a1a1a 0%, transparent 50%); }
-
+        border-top: 1px solid var(--br-1);
+        border-bottom: 1px solid var(--br-1);
+        padding: 0 var(--p-20);
     }
-}    
+
+    .subtitle {
+        color: var(--fg-2);
+        max-width: 90ch;
+        font-size: var(--sz-2);
+        padding: 0 var(--p-20);
+    }
+} 
 
 .navigate { height: 20px; }
 
@@ -108,9 +110,8 @@ nav {
     width: 100%;
     display: grid;
     position: relative;
-    background-image: url('/Lines.svg');
-    background-size: 200px;
-    padding: 15px 20px;
+    padding: 15px 0;
+    margin-top: 80px;
 
     &::before {
         position: absolute;
@@ -119,63 +120,113 @@ nav {
         left: 50%;
         transform: translateX(-50%);
         width: 200vw;
-        border-top: 1px solid var(--border-mm-white);
-    }
-
-    &::after {
-        position: absolute;
-        content: '';
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 200vw;
-        border-bottom: 1px solid var(--border-mm-white);
+        border-top: 1px solid var(--br-1);
     }
 
     .title {
-        font-size: clamp(25px, 5vw, 30px);
-        color: var(--font-black);
+        font-size: clamp(25px, 5vw, 40px);
+        color: var(--fg-1);
         text-align: left;
-        max-width: 30ch;
         font-weight: 600;
+        position: relative;
+        padding: 0 var(--p-20) 2px;
+
+        &::before {
+            position: absolute;
+            content: '';
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 200vw;
+            border-top: 1px solid var(--br-1);
+        }
+    
+        &::after {
+            position: absolute;
+            content: '';
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 200vw;
+            border-bottom: 1px solid var(--br-1);
+        }
     }
 
     .subTitle {
-        max-width: 60ch;
-        font-size: 16px;
-        color: var(--font-sm-black);
-        font-weight: 500;
-        line-height: 1.6;
-        margin-top: 5px;
+        color: var(--fg-2);
+        font-weight: 600;
+        line-height: 1.5;
+        padding: 0 var(--p-20);
+        font-size: var(--sz-2);
+        max-width: 90ch;
     }
 
-    span {
+    .left-span {
         position: absolute;
         top: calc(50% - 8px);
-        left: -95px;
-        color: var(--font-black);
+        left: -160px;
+        color: var(--fg-2);
+        font-family: "Consolas";
         text-transform: uppercase;
-        font-weight: 500;
-        font-size: 12px;
+        font-size: calc(var(--sz-1) - 1px);
+        font-weight: 600;
         transform: rotate(-90deg);
-        z-index: 100;
+        background-color: var(--bg-1);
+        padding: 3px var(--p-10);
+        border-radius: var(--rd-10);
+        border: var(--border-solid-3);
     }
 }
 
-.about, .experience, .service, .projects, .skills, .extra, .contact {
+.code-tailwind {
+    font-family: "Consolas";
+    color: var(--fg-3);
+    padding-left: var(--p-8);
+}
+
+.skill-sec {
+    width: 100%;
+    display: grid;
+    place-items: center;
+    padding: 80px 0;
+    overflow: hidden;
+    position: relative;
+    border-top: var(--border-solid-3);
+    border-bottom: var(--border-solid-3);
+    background-image: url('/Lines.svg');
+    background-size: 100px;
+
+    .title {
+        text-align: center;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        font-size: clamp(50px, 8vw, 70px);
+        color: var(--fg-1);
+        line-height: 1;
+        letter-spacing: -6px;
+        position: relative;
+        border-top: 1px solid var(--br-1);
+        border-bottom: 1px solid var(--br-1);
+        padding: 0 var(--p-20);
+        z-index: 10;
+    }
+}
+
+.about, .experience, .service, .projects, .contact {
     display: grid;
     position: relative;
     grid-template-columns: 1fr 1fr;
 }
 
-.experience, .service, .projects, .extra {
-    padding: 10px;
-    background-color: var(--bg-mm-white);
-    gap: 10px;
+.experience, .service, .projects {
+    padding: var(--p-10);
+    background-color: var(--bg-3);
+    gap: var(--g-10);
+    border-top: var(--border-solid-3);
+    border-bottom: var(--border-solid-3);
 }
-
-.about::before { display: none; }
-.contact { padding-bottom: 0; }
 
 .extra {
     width: 100%;
