--- a/src/css/general.css
+++ b/src/css/general.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
-
 :root {
     --bg-1: #020607;
     --bg-2: #0f0f0f;
@@ -13,6 +10,9 @@
     --fg-1: #e8e8e8;
     --fg-2: #828f92;
     --fg-3: #3f484a;
+    --fg-4: #a0b0b4;
+
+    --bg-bl-li-1: #81f0ff0f;
 
     --rd-4: 4px;
     --rd-6: 6px;
@@ -49,10 +49,23 @@
 }
 
 @font-face {
-    font-family: "Poppins";
-    src: url('/src/assets/font/Poppins-Regular.woff2') format(woff2);
-    font-weight: 400;
+    font-family: "Red Hat Display";
+    src: url('/src/assets/font/RedHatDisplay-Medium.woff2') format(woff2);
+    font-weight: 500;
 }
+
+@font-face {
+    font-family: "Red Hat Display";
+    src: url('/src/assets/font/RedHatDisplay-SemiBold.woff2') format(woff2);
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: "Red Hat Display";
+    src: url('/src/assets/font/RedHatDisplay-Bold.woff2') format(woff2);
+    font-weight: 900;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -92,6 +105,7 @@ body {
         background-image: url('/Lines.svg');
         background-size: 100px;
         border-left: var(--border-solid-3);
+        background-color: var(--bg-1);
     }
     
     .flurry-right {
@@ -101,6 +115,7 @@ body {
         background-image: url('/Lines.svg');
         background-size: 100px;
         border-right: var(--border-solid-3);
+        background-color: var(--bg-1);
     }
 }
 
@@ -122,7 +137,7 @@ p { line-height: 1.6; }
         cursor: pointer;
         text-decoration: none;
         color: var(--fg-1);
-        padding: var(--p-8) var(--p-15);
+        padding: calc(var(--p-8) - 1px) var(--p-15);
         border: var(--border-solid-3);
         background: linear-gradient(To bottom, var(--bg-1) 40%, var(--bg-3) 100%);
 
@@ -143,22 +158,28 @@ p { line-height: 1.6; }
 }
 
 .svg-1 {
+    top: 100px;
     left: -400px;
 }
 
 .svg-2 {
-    top: 900px;
+    top: 800px;
     right: -400px;
 }
 
 .svg-3 {
-    top: 1800px;
+    top: 1500px;
     left: -400px;
 }
 
 .svg-4 {
-    top: 2600px;
+    top: 2200px;
     right: -400px;
+}
+
+.svg-5 {
+    top: 2900px;
+    left: -400px;
 }
 
 footer {
