--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -3,8 +3,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
-    display: none;
+    height: calc(100vh - 0px);
+    scale: 0;
+    display: grid;
     place-items: center;
     backdrop-filter: brightness(0.5) blur(3px);
     z-index: 1000;
@@ -13,42 +14,29 @@
         position: relative;
         display: flex;
         flex-direction: column;
-        gap: 15px;
+        gap: var(--g-10);
         width: 350px;
-
-        &::before {
-            position: absolute;
-            content: '';
-            top: 0;
-            left: -1px;
-            transform: translateY(-50%);
-            height: 200vh;
-            border-left: 1px solid var(--br-3);
-            z-index: 10;
-        }
-    
-        &::after {
-            position: absolute;
-            content: '';
-            top: 0;
-            right: -1px;
-            transform: translateY(-50%);
-            height: 200vh;
-            border-right: 1px solid var(--br-3);
-            z-index: 10;
-        }
+        border: 1px solid var(--br-3);
+        padding: var(--p-10);
+        background-color: var(--bg-3);
+        border-radius: var(--rd-10);
+        scale: 0;
+        transition: 300ms;
 
         & h5 {
             display: grid;
             place-items: center;
-            gap: 10px;
+            font-size: var(--sz-2);
+            gap: var(--g-10);
             color: var(--fg-1);
             padding: var(--p-20);
-            text-transform: uppercase;
-            outline: var(--border-solid-1);
-            background-color: var(--bg-1);
             background-image: url('/Lines.svg');
             background-size: 100px;
+            border-radius: var(--rd-10);
+            background-color: var(--bg-1);
+            border: var(--border-solid-1);
+            border-bottom: 2px solid var(--bg-1);
+            box-shadow: inset 1px 1px 10px var(--br-1);
             
             & svg {
                 width: 35px;
@@ -64,8 +52,8 @@
 
         & h6 {
             color: var(--fg-1);
-            text-transform: uppercase;
             background-color: var(--bg-1);
+            font-size: var(--sz-2);
         }
 
         & .modal-question {
@@ -73,28 +61,12 @@
             flex-direction: column;
             gap: var(--g-10);
             padding: var(--p-20);
-            background-color: var(--bg-1);
             position: relative;
-
-            &::before {
-                position: absolute;
-                content: '';
-                top: 0;
-                left: 50%;
-                transform: translateX(-50%);
-                width: 200vw;
-                border-top: var(--border-solid-1);
-            }
-        
-            &::after {
-                position: absolute;
-                content: '';
-                bottom: 0;
-                left: 50%;
-                transform: translateX(-50%);
-                width: 200vw;
-                border-bottom: var(--border-solid-1);
-            }
+            border-radius: var(--rd-10);
+            background-color: var(--bg-1);
+            border: var(--border-solid-1);
+            border-bottom: 2px solid var(--bg-1);
+            box-shadow: inset 1px 1px 10px var(--br-1);
 
             & .row {
                 display: flex;
@@ -114,8 +86,7 @@
             display: flex;
             align-items: center;
             justify-content: flex-end;
-            gap: 8px;
-            padding-right: 15px;
+            gap: var(--g-8);
 
             & .btn {
                 text-decoration: none;
@@ -132,7 +103,21 @@
     }
 }
 
-.modal-open { display: grid; }
+.modal-open { 
+    scale: 1;
+    
+    .card-modal {
+        scale: 1;
+    }
+}
+
+.modal-close { 
+    scale: 0;
+    
+    .card-modal {
+        scale: 0;
+    }
+}
 
 .select {
     width: 18px;
